--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -14,21 +14,24 @@ jobs:
       - name: setupJava
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          java-version: "21"
+          distribution: "temurin"
           architecture: x64
 
       - name: Install Linter
-        ##TODO
+        run: mvn checkstyle:checkstyle
 
       - name: Run Checkstyle
-        ##TODO
+        run: mvn validate
 
       - name: Upload Checkstyle Result
-        ##TODO
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkstyle-report
+          path: target/site/checkstyle.html
 
       - name: Run Maven Test
-        ##TODO
+        run: mvn test
 
       - name: Jacoco Report
-        ##TODO
+        run: mvn jacoco:report
